# provcheck

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
brand/: README.md
crates/provcheck-cli/: Cargo.toml
crates/provcheck-cli/src/: main.rs
crates/provcheck-core/: Cargo.toml
crates/provcheck-core/src/: lib.rs  render.rs
crates/provcheck-core/tests/: integration.rs
crates/provcheck-core/tests/fixtures/: README.md
crates/provcheck-examples/: Cargo.toml
crates/provcheck-examples/src/: main.rs
crates/provcheck-platform/src/: network.rs  storage.rs
crates/provcheck/src/: lib.rs  report.rs  verification.rs
examples/: README.md  rAIdio.bot-sample.c2pa
scripts/: make-unsigned-examples.py  publish-release.sh
