[package]
name = "provcheck-cli"
description = "Command-line C2PA Content Credentials verifier."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "provcheck"
path = "src/main.rs"

[dependencies]
provcheck-core = { path = "../provcheck-core", version = "0.1.0" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
